examples/core/src/main/java/org/jbehave/examples/core/stories/failing/examples_table_failing.story
Meta: 

@theme parametrisation

Scenario:  State of parametrised scenarios is not reset, thus the final state will be a failure

Given a value <value>

Examples:
|value|
|bad|
|good|
